simbuto (0.1.1) UNRELEASED; urgency=medium

  * add command-line options (help, verbose, debug)
  * add version info to about dialog

 -- Yann Büchau <yann.buechau@web.de>  Thu, 05 Jan 2017 14:38:08 +0100

simbuto (0.1) unstable; urgency=medium

  * Initial release.
  * first usable version with all basic features:
    - file opening, saving, saving as, etc...
    - creation of a graph based on the given budget input
    - mimetype entry
  * Known issues:
    - window can't be shrinked smaller than the graph image

 -- Yann Büchau <yann.buechau@web.de>  Tue, 03 Jan 2017 14:53:05 +0100